# openslide

./: CMakeLists.txt  README.md  config.h.cmake  configure.ac
common/: CMakeLists.txt
src/: openslide.c  openslide.h
test/: CMakeLists.txt
tools/: CMakeLists.txt
